<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@color/colorBack">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        app:srcCompat="@drawable/getstartlogo"
        android:scaleType="centerInside"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:text="@string/welcome_txt"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/welcome_sub_txt"
        android:textColor="@color/colorHeading"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35">
    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.35"
        android:background="@drawable/custom_icon"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/getstarted"
        android:textColor="@color/colorBack"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35">
    </LinearLayout>
</LinearLayout>