<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/colorBack">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/applogonew"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_dialog_email"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:src="@android:drawable/ic_lock_idle_lock" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            />
    </LinearLayout>

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="@color/colorText"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:gravity="end|bottom"
        android:layout_marginTop="8dp"
        android:clickable="true"
        />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/custom_icon"
        android:onClick="login"
        android:padding="8dp"
        android:text="@string/login_txt"
        android:textColor="@color/colorBack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="@color/colorText"
        android:text="OR"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/facebook"
            />
        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/twitter"
            />
        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/google"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:gravity="end"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="start"
            android:onClick="register"
            android:text="@string/reg_txt"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>