<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/colorBack">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/applogonew"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_txt"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_dialog_email"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:src="@android:drawable/ic_lock_idle_lock" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:src="@android:drawable/ic_lock_idle_lock" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        ></LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/custom_icon"
        android:onClick="login"
        android:padding="8dp"
        android:text="@string/reg_txt"
        android:textColor="@color/colorBack"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        ></LinearLayout>
</LinearLayout>